added metrics and monitoring

--- a/client/index.html
+++ b/client/index.html
@@ -406,6 +406,9 @@
             <a href="map.html" class="map-button" target="_blank">
                 Map View
             </a>
+            <a href="monitoring.html" class="map-button" target="_blank" style="background: #059669;">
+                Monitoring Dashboard
+            </a>
         </h1>
         <div class="stats">
             <div class="stat">Total: <span id="totalCount">0</span></div>
