--- a/client/map.html
+++ b/client/map.html
@@ -244,7 +244,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>Taiwan Highway CCTV Map</h1>
+        <h1>
+            Taiwan Highway CCTV Map
+            <a href="index.html" style="padding: 8px 20px; background: #3b82f6; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 500; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; margin-left: 15px;">
+                ← Back to Main
+            </a>
+        </h1>
         <div class="stats">
             <div class="stat">
                 <div class="stat-value" id="totalFeeds">0</div>
